# ColorAIze

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  download_model.py  pyproject.toml
backend/app/: colorizer.py  main.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx
ml/: DATASET_SCHEMA.md  Dockerfile.download  pyproject.toml
ml/data/: metadata.csv
ml/notebooks/: experiments.ipynb
ml/scripts/: dataset.py  download_dataset_coco.py  download_model.py  evaluate.py  model_unet.py  train.py
