[tool.poetry]
name = "colorization-ml"
version = "0.1.0"
description = "ML models for image colorization"
authors = ["Your Team <team@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.0"
torchvision = "^0.16.0"
opencv-python = "^4.8.1"
pillow = "^10.1.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
jupyter = "^1.0.0"
scikit-image = "^0.21.0"
fastai = "^1.0.61"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"